fix other item overlaps on cart items

--- a/styles/cart.css
+++ b/styles/cart.css
@@ -868,10 +868,7 @@ section
 	font-weight: 300;
 	color: #4a4a4a;
 }
-.product_name_container
-{
-	padding-left: 30px;
-}
+
 .product_name a
 {
 	font-size: 18px;
